--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="row justify-content-center">
           <div class="col-md-6">
             <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
-              <strong>Terima Kasih!</strong> Pesan Anda sudah Kami terima.
+              <strong>Thank you!</strong> Your message has been received.
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
             <form name="jrw-contact-form">
